deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    name: blog
    app: blog
    environment: production
