deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
  labels:
    app: blog
spec:
  selector:
    app: blog
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
---
# PostgreSQL Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: blog
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  type: ClusterIP
